--- a/root/ansible/ansible-server02.yml
+++ b/root/ansible/ansible-server02.yml
@@ -15,33 +15,47 @@
 
   - name: Criando Bash Terraform
     shell: /usr/bin/mv /root/terraform /usr/bin/
-    
+
   - name: Rundeck
-    yum: 
+    yum:
       name: "{{ item }}"
       state: installed
     with_items:
       - java-1.8.0
       - http://repo.rundeck.org/latest.rpm
-    
+
   - name: Instalando Rundeck
     yum:
       name: rundeck
       state: installed
 
-  - name: Configurandos o Rundeck
+  - name: Configurando o Rundeck
     systemd:
       name: rundeckd
       enabled: yes
       state: started
       daemon_reload: yes
 
+  - copy:
+    src: /root/labyuri/etc/rundeck/rundeck-config.properties
+    dest: /etc/rundeck/rundeck-config.properties
+    owner: root
+    group: root
+    mode: u=rw,g=r,o=r
+
   - name: Desabilitando Firewall
     service:
        name: firewalld
        state: stopped
        enabled: False
-       
+
+  - copy:
+    src: /root/labyuri/etc/google-cloud-sdk.repo
+    dest: /etc/yum.repos.d/google-cloud-sdk.repo
+    owner: root
+    group: root
+    mode: u=rw,g=r,o=r
+
   - name: Atualizando o sistema e Instalando o GCloud
     yum:
      name: google-cloud-sdk
@@ -51,5 +65,3 @@
     file:
      path: /root/google_cloud
      state: directory
-
-
