--- a/etc/graylog/server/server.conf
+++ b/etc/graylog/server/server.conf
@@ -67,7 +67,7 @@ root_password_sha2 = 9a68734ce25939fca121697e64089a3e15c6b471fde7100f0e1ae7cd2bb
 
 # The email address of the root user.
 # Default is empty
-#root_email = "bolachudo@gmail.com"
+root_email = "bolachudo@gmail.com"
 
 # The time zone setting of the root user. See http://www.joda.org/joda-time/timezones.html for a list of valid time zones.
 # Default is UTC
@@ -100,7 +100,7 @@ plugin_dir = /usr/share/graylog-server/plugin
 # If the port is omitted, Graylog will use port 9000 by default.
 #
 # Default: 127.0.0.1:9000
-#http_bind_address = 127.0.0.1:9000
+http_bind_address = 10.0.2.9:9000
 #http_bind_address = [2001:db8::1]:9000
 
 #### HTTP publish URI
